[gd_scene load_steps=5 format=3 uid="uid://jqbjgv6vxruj"]

[ext_resource type="Script" uid="uid://bmig5dpbvw4fp" path="res://Scrips/cutsceen.gd" id="1_4ixod"]
[ext_resource type="VideoStream" uid="uid://bfg28n4e725q1" path="res://Resources/johnnyOrigin.ogv" id="2_lp7eo"]
[ext_resource type="Texture2D" uid="uid://cx75fenxqq8wp" path="res://Resources/resources/sprites/ui/text/skip1.png" id="4_6my6n"]

[sub_resource type="SpriteFrames" id="SpriteFrames_jwoqj"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_6my6n")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_6my6n")
}],
"loop": true,
"name": &"skip",
"speed": 5.0
}]

[node name="cutseen" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_4ixod")

[node name="VideoStreamPlayer" type="VideoStreamPlayer" parent="."]
layout_mode = 0
offset_right = 1150.0
offset_bottom = 648.0
stream = ExtResource("2_lp7eo")
autoplay = true
expand = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(1088.75, 50.5274)
scale = Vector2(0.08, 0.08)
sprite_frames = SubResource("SpriteFrames_jwoqj")
animation = &"skip"
autoplay = "idle"

[node name="Skip" type="Button" parent="AnimatedSprite2D"]
offset_left = -634.0
offset_top = -419.0
offset_right = 616.0
offset_bottom = 369.0
focus_mode = 0
flat = true

[connection signal="finished" from="VideoStreamPlayer" to="." method="_on_video_stream_player_finished"]
[connection signal="mouse_entered" from="AnimatedSprite2D/Skip" to="." method="_on_skip_mouse_entered"]
[connection signal="mouse_exited" from="AnimatedSprite2D/Skip" to="." method="_on_skip_mouse_exited"]
[connection signal="pressed" from="AnimatedSprite2D/Skip" to="." method="_on_skip_pressed"]
